Set default lang to english

--- a/bin/md5-utils.cfg
+++ b/bin/md5-utils.cfg
@@ -1,5 +1,5 @@
 # Languages: 'en' for english | 'fr' for french
-language = fr
+language = en
 
 # Colors (not available on Microsoft OS)
 colors = true
